feat(VENLY-3756) IMX - Get ERC20 Token balance (#160)
* feat(VENLY-3756) get ERC20 token balance from IMX

* feat(VENLY-3756) rename endpoints according to the code review

Co-authored-by: Maciej Witwicki <maciej@venly.io>